--- a/node11.html
+++ b/node11.html
@@ -140,7 +140,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <HR>
 
 <H1><A NAME="SECTION04140000000000000000"></A>
-   <A NAME="3373"></A>
+   <A NAME="3374"></A>
   
 <A NAME="sectionpractica:csv"></A>
 <BR>
@@ -412,9 +412,10 @@ expression will remain constant.
 
 <P>
 </LI>
-<LI>For example, if you use literal notation
+<LI>For example, 
+<FONT COLOR="#ff0000"> if you use literal notation
 to construct a regular expression used in a loop, the regular expression
-won't be recompiled on each iteration.
+won't be recompiled on each iteration</FONT>.
 </LI>
 </UL>
 
@@ -456,11 +457,11 @@ var re = new RegExp("\\w+");
 <code>str.search(regexp)</code>
 
 <P>
-If successful, search returns the index of the regular expression inside
+If successful, <code>search</code> returns the index of the regular expression inside
 the string. Otherwise, it returns <code>-1</code>.
 
 <P>
-When you want to know whether a pattern is found in a string use search
+When you want to know whether a pattern is found in a string use <code>search</code>
 (similar to the regular expression <code>test</code> method); for more information
 (but slower execution) use <code>match</code> (similar to the regular expression
 <code>exec</code> method).
@@ -596,7 +597,7 @@ jQuery</A>
   HREF="http://jquery.com/download/">Descarga la librería</A>)
 
 <P>
-<A NAME="3400"></A><SPAN  CLASS="textbf">jQuery</SPAN> is a cross-platform JavaScript library designed to simplify
+<A NAME="3403"></A><SPAN  CLASS="textbf">jQuery</SPAN> is a cross-platform JavaScript library designed to simplify
 the client-side scripting of HTML. 
 
 <P>
@@ -827,7 +828,7 @@ $( "p" ).removeClass( "myClass noClass" ).addClass( "yourClass" );
 
 <P>
 JavaScript enables you to freely
-pass functions around to be executed at a later time. A <A NAME="3410"></A><SPAN  CLASS="textbf">callback</SPAN> is a
+pass functions around to be executed at a later time. A <A NAME="3413"></A><SPAN  CLASS="textbf">callback</SPAN> is a
 function that is passed as an argument to another function and is usually 
 executed
 after its parent function has completed. 
@@ -1249,11 +1250,11 @@ Templates en Underscore</A>
 <P>
 Compiles JavaScript templates into functions that can be evaluated for
 rendering. Useful for rendering complicated bits of HTML from a JavaScript 
-object or from <A NAME="3425"></A><SPAN  CLASS="textbf">JSON</SPAN> data
+object or from <A NAME="3428"></A><SPAN  CLASS="textbf">JSON</SPAN> data
 sources.
 
 <P>
-JSON, or <A NAME="3427"></A><SPAN  CLASS="textbf">JavaScript Object Notation</SPAN>, is an open standard format
+JSON, or <A NAME="3430"></A><SPAN  CLASS="textbf">JavaScript Object Notation</SPAN>, is an open standard format
 that uses human-readable text to transmit data objects consisting of
 attribute–value pairs. It is used primarily to transmit data between
 a server and web application, as an alternative to XML.
@@ -1527,7 +1528,7 @@ textarea, autofocus y button</A>
 The <code>&lt;textarea&gt;</code> tag defines a multi-line text input control.
 
 <P>
-A <A NAME="3437"></A><SPAN  CLASS="textbf">text area</SPAN> can hold an unlimited number of characters, and the text
+A <A NAME="3440"></A><SPAN  CLASS="textbf">text area</SPAN> can hold an unlimited number of characters, and the text
 renders in a fixed-width font (usually Courier).
 
 <P>
@@ -1576,7 +1577,7 @@ Local Storage (HTML5 Web Storage)</A>
   
 
 <P>
-<A NAME="3443"></A><SPAN  CLASS="textbf">Web storage</SPAN> and <A NAME="3445"></A><SPAN  CLASS="textbf">DOM storage</SPAN> 
+<A NAME="3446"></A><SPAN  CLASS="textbf">Web storage</SPAN> and <A NAME="3448"></A><SPAN  CLASS="textbf">DOM storage</SPAN> 
 (document object model) are web application
 software methods and protocols used for storing data in a web browser. 
 
@@ -1596,8 +1597,8 @@ parecido, pero con el limite de 100kb.
 
 <P>
 </LI>
-<LI>There are two main web storage types: <A NAME="3447"></A><SPAN  CLASS="textbf">local storage</SPAN>
-and <A NAME="3449"></A><SPAN  CLASS="textbf">session storage</SPAN>, behaving similarly to persistent cookies and session
+<LI>There are two main web storage types: <A NAME="3450"></A><SPAN  CLASS="textbf">local storage</SPAN>
+and <A NAME="3452"></A><SPAN  CLASS="textbf">session storage</SPAN>, behaving similarly to persistent cookies and session
 cookies respectively.
 </LI>
 <LI>Unlike cookies, which can be accessed by both the server and client side, web storage falls exclusively under the purview of client-side scripting
@@ -1730,7 +1731,7 @@ basándonos en el lenguaje o que tipo de etiqueta no son
 <LI><A NAME="tex2html114"
   HREF="http://www.w3.org/TR/CSS2/selector.html#pattern-matching">CSS pattern matching</A>
 <P>
-In CSS, <A NAME="3457"></A><SPAN  CLASS="textbf">pattern matching</SPAN> rules determine which style rules apply
+In CSS, <A NAME="3460"></A><SPAN  CLASS="textbf">pattern matching</SPAN> rules determine which style rules apply
 to elements in the document tree. 
 These patterns, called selectors,
 may range from simple element names to rich contextual patterns. If all
