--- a/node11.html
+++ b/node11.html
@@ -448,10 +448,10 @@ var re = new RegExp("\\w+");
 
 <P>
 </LI>
-<LI><A NAME="tex2html79"
+<LI>RegExp.prototype.<A NAME="tex2html79"
   HREF="https://developer.mozilla.org/en-US/docs/JavaScript/Reference/Global_Objects/RegExp/exec">exec</A>
 </LI>
-<LI><A NAME="tex2html80"
+<LI>String.prototype.<A NAME="tex2html80"
   HREF="https://developer.mozilla.org/en-US/docs/JavaScript/Reference/Global_Objects/String/search">search</A>
 <P>
 <code>str.search(regexp)</code>
