--- a/node11.html
+++ b/node11.html
@@ -466,10 +466,10 @@ When you want to know whether a pattern is found in a string use <code>search</c
 (but slower execution) use <code>match</code> (similar to the regular expression
 <code>exec</code> method).
 </LI>
-<LI><A NAME="tex2html81"
+<LI>String.prototype.<A NAME="tex2html81"
   HREF="https://developer.mozilla.org/en-US/docs/JavaScript/Reference/Global_Objects/String/match">match</A>
 </LI>
-<LI><A NAME="tex2html82"
+<LI>String.prototype.<A NAME="tex2html82"
   HREF="https://developer.mozilla.org/en-US/docs/JavaScript/Reference/Global_Objects/String/replace">replace</A>
 <P>
 The <code>replace()</code> method returns a new string with some or all matches of
