--- a/node11.html
+++ b/node11.html
@@ -450,6 +450,13 @@ var re = new RegExp("\\w+");
 </LI>
 <LI>RegExp.prototype.<A NAME="tex2html79"
   HREF="https://developer.mozilla.org/en-US/docs/JavaScript/Reference/Global_Objects/RegExp/exec">exec</A>
+<P>
+The <code>exec()</code> method executes a search for a match in a specified string. Returns a result array, or <code>null</code>.
+
+<P>
+If you are executing a match simply to find true or false, use the <code>RegExp.prototype.test()</code> method or the <code>String.prototype.search()</code> method.
+
+<P>
 </LI>
 <LI>String.prototype.<A NAME="tex2html80"
   HREF="https://developer.mozilla.org/en-US/docs/JavaScript/Reference/Global_Objects/String/search">search</A>
