--- a/node11.html
+++ b/node11.html
@@ -454,7 +454,9 @@ var re = new RegExp("\\w+");
 The <code>exec()</code> method executes a search for a match in a specified string. Returns a result array, or <code>null</code>.
 
 <P>
-If you are executing a match simply to find true or false, use the <code>RegExp.prototype.test()</code> method or the <code>String.prototype.search()</code> method.
+If you are executing a match simply to find <code>true</code> 
+or <code>false</code>, 
+use the <code>RegExp.prototype.test()</code> method or the <code>String.prototype.search()</code> method.
 
 <P>
 </LI>
