--- a/node11.html
+++ b/node11.html
@@ -140,7 +140,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <HR>
 
 <H1><A NAME="SECTION04140000000000000000"></A>
-   <A NAME="3376"></A>
+   <A NAME="3377"></A>
   
 <A NAME="sectionpractica:csv"></A>
 <BR>
@@ -498,8 +498,9 @@ for each match.
 </PRE>
 
 <P>
-The replacement string can be a function to be invoked to create the
-new substring (to put in place of the substring received from parameter
+
+<FONT COLOR="#ff0000"> The replacement string can be a function to be invoked to create the
+new substring</FONT> (to put in place of the substring received from parameter
 <code>#1</code>). The arguments supplied to this function are:
 
 <P>
@@ -606,7 +607,7 @@ jQuery</A>
   HREF="http://jquery.com/download/">Descarga la librería</A>)
 
 <P>
-<A NAME="3405"></A><SPAN  CLASS="textbf">jQuery</SPAN> is a cross-platform JavaScript library designed to simplify
+<A NAME="3408"></A><SPAN  CLASS="textbf">jQuery</SPAN> is a cross-platform JavaScript library designed to simplify
 the client-side scripting of HTML. 
 
 <P>
@@ -837,7 +838,7 @@ $( "p" ).removeClass( "myClass noClass" ).addClass( "yourClass" );
 
 <P>
 JavaScript enables you to freely
-pass functions around to be executed at a later time. A <A NAME="3415"></A><SPAN  CLASS="textbf">callback</SPAN> is a
+pass functions around to be executed at a later time. A <A NAME="3418"></A><SPAN  CLASS="textbf">callback</SPAN> is a
 function that is passed as an argument to another function and is usually 
 executed
 after its parent function has completed. 
@@ -1259,11 +1260,11 @@ Templates en Underscore</A>
 <P>
 Compiles JavaScript templates into functions that can be evaluated for
 rendering. Useful for rendering complicated bits of HTML from a JavaScript 
-object or from <A NAME="3430"></A><SPAN  CLASS="textbf">JSON</SPAN> data
+object or from <A NAME="3433"></A><SPAN  CLASS="textbf">JSON</SPAN> data
 sources.
 
 <P>
-JSON, or <A NAME="3432"></A><SPAN  CLASS="textbf">JavaScript Object Notation</SPAN>, is an open standard format
+JSON, or <A NAME="3435"></A><SPAN  CLASS="textbf">JavaScript Object Notation</SPAN>, is an open standard format
 that uses human-readable text to transmit data objects consisting of
 attribute–value pairs. It is used primarily to transmit data between
 a server and web application, as an alternative to XML.
@@ -1537,7 +1538,7 @@ textarea, autofocus y button</A>
 The <code>&lt;textarea&gt;</code> tag defines a multi-line text input control.
 
 <P>
-A <A NAME="3442"></A><SPAN  CLASS="textbf">text area</SPAN> can hold an unlimited number of characters, and the text
+A <A NAME="3445"></A><SPAN  CLASS="textbf">text area</SPAN> can hold an unlimited number of characters, and the text
 renders in a fixed-width font (usually Courier).
 
 <P>
@@ -1586,7 +1587,7 @@ Local Storage (HTML5 Web Storage)</A>
   
 
 <P>
-<A NAME="3448"></A><SPAN  CLASS="textbf">Web storage</SPAN> and <A NAME="3450"></A><SPAN  CLASS="textbf">DOM storage</SPAN> 
+<A NAME="3451"></A><SPAN  CLASS="textbf">Web storage</SPAN> and <A NAME="3453"></A><SPAN  CLASS="textbf">DOM storage</SPAN> 
 (document object model) are web application
 software methods and protocols used for storing data in a web browser. 
 
@@ -1606,8 +1607,8 @@ parecido, pero con el limite de 100kb.
 
 <P>
 </LI>
-<LI>There are two main web storage types: <A NAME="3452"></A><SPAN  CLASS="textbf">local storage</SPAN>
-and <A NAME="3454"></A><SPAN  CLASS="textbf">session storage</SPAN>, behaving similarly to persistent cookies and session
+<LI>There are two main web storage types: <A NAME="3455"></A><SPAN  CLASS="textbf">local storage</SPAN>
+and <A NAME="3457"></A><SPAN  CLASS="textbf">session storage</SPAN>, behaving similarly to persistent cookies and session
 cookies respectively.
 </LI>
 <LI>Unlike cookies, which can be accessed by both the server and client side, web storage falls exclusively under the purview of client-side scripting
@@ -1740,7 +1741,7 @@ basándonos en el lenguaje o que tipo de etiqueta no son
 <LI><A NAME="tex2html114"
   HREF="http://www.w3.org/TR/CSS2/selector.html#pattern-matching">CSS pattern matching</A>
 <P>
-In CSS, <A NAME="3462"></A><SPAN  CLASS="textbf">pattern matching</SPAN> rules determine which style rules apply
+In CSS, <A NAME="3465"></A><SPAN  CLASS="textbf">pattern matching</SPAN> rules determine which style rules apply
 to elements in the document tree. 
 These patterns, called selectors,
 may range from simple element names to rich contextual patterns. If all
