--- a/node11.html
+++ b/node11.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html1030"
+<A NAME="tex2html1031"
   HREF="node12.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1024"
+<A NAME="tex2html1025"
   HREF="node7.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1018"
+<A NAME="tex2html1019"
   HREF="node10.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1026"
+<A NAME="tex2html1027"
   HREF="node90.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1028"
+<A NAME="tex2html1029"
   HREF="node93.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -80,18 +80,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1031"
+<B> Sig:</B> <A NAME="tex2html1032"
   HREF="node12.html">Comentarios y Consejos</A>
-<B>Sup:</B> <A NAME="tex2html1025"
+<B>Sup:</B> <A NAME="tex2html1026"
   HREF="node7.html">Expresiones Regulares y Análisis</A>
-<B> Ant:</B> <A NAME="tex2html1019"
+<B> Ant:</B> <A NAME="tex2html1020"
   HREF="node10.html">Práctica: Conversor de Temperaturas</A>
 <B> Con:</B> 
-<A NAME="tex2html1026"
+<A NAME="tex2html1027"
   HREF="node90.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html1028"
+<A NAME="tex2html1029"
   HREF="node93.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -103,38 +103,40 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <UL CLASS="ChildLinks">
 <LI><UL>
 <LI><UL>
-<LI><A NAME="tex2html1032"
-  HREF="node11.html#SECTION04140010000000000000">Donde</A>
 <LI><A NAME="tex2html1033"
-  HREF="node11.html#SECTION04140020000000000000">Introducción al formato CSV</A>
+  HREF="node11.html#SECTION04140010000000000000">Donde</A>
 <LI><A NAME="tex2html1034"
-  HREF="node11.html#SECTION04140030000000000000">Ejemplo de ejecución</A>
+  HREF="node11.html#SECTION04140020000000000000">Introducción al formato CSV</A>
 <LI><A NAME="tex2html1035"
-  HREF="node11.html#SECTION04140040000000000000">Aproximación al análisis mediante expresiones regulares de CSV</A>
+  HREF="node11.html#SECTION04140030000000000000">Ejemplo de ejecución</A>
 <LI><A NAME="tex2html1036"
-  HREF="node11.html#SECTION04140050000000000000">index.html</A>
+  HREF="node11.html#SECTION04140040000000000000">Aproximación al análisis mediante expresiones regulares de CSV</A>
 <LI><A NAME="tex2html1037"
-  HREF="node11.html#SECTION04140060000000000000">jQuery</A>
+  HREF="node11.html#SECTION04140050000000000000">index.html</A>
 <LI><A NAME="tex2html1038"
-  HREF="node11.html#SECTION04140070000000000000">How JQuery Works</A>
+  HREF="node11.html#SECTION04140060000000000000">jQuery</A>
 <LI><A NAME="tex2html1039"
-  HREF="node11.html#SECTION04140080000000000000">JSON.stringify()</A>
+  HREF="node11.html#SECTION04140070000000000000">How JQuery Works</A>
 <LI><A NAME="tex2html1040"
-  HREF="node11.html#SECTION04140090000000000000">Underscore</A>
+  HREF="node11.html#SECTION04140080000000000000">Ajax, jQuery y Sinatra</A>
 <LI><A NAME="tex2html1041"
-  HREF="node11.html#SECTION041400100000000000000">Templates en Underscore</A>
+  HREF="node11.html#SECTION04140090000000000000">JSON.stringify()</A>
 <LI><A NAME="tex2html1042"
-  HREF="node11.html#SECTION041400110000000000000">Content delivery network or content distribution network (CDN)</A>
+  HREF="node11.html#SECTION041400100000000000000">Underscore</A>
 <LI><A NAME="tex2html1043"
-  HREF="node11.html#SECTION041400120000000000000">textarea, autofocus y button</A>
+  HREF="node11.html#SECTION041400110000000000000">Templates en Underscore</A>
 <LI><A NAME="tex2html1044"
-  HREF="node11.html#SECTION041400130000000000000">Local Storage (HTML5 Web Storage)</A>
+  HREF="node11.html#SECTION041400120000000000000">Content delivery network or content distribution network (CDN)</A>
 <LI><A NAME="tex2html1045"
-  HREF="node11.html#SECTION041400140000000000000">global.css</A>
+  HREF="node11.html#SECTION041400130000000000000">textarea, autofocus y button</A>
 <LI><A NAME="tex2html1046"
-  HREF="node11.html#SECTION041400150000000000000">csv.js</A>
+  HREF="node11.html#SECTION041400140000000000000">Local Storage (HTML5 Web Storage)</A>
 <LI><A NAME="tex2html1047"
-  HREF="node11.html#SECTION041400160000000000000">Tareas</A>
+  HREF="node11.html#SECTION041400150000000000000">global.css</A>
+<LI><A NAME="tex2html1048"
+  HREF="node11.html#SECTION041400160000000000000">csv.js</A>
+<LI><A NAME="tex2html1049"
+  HREF="node11.html#SECTION041400170000000000000">Tareas</A>
 </UL></UL></UL>
 <!--End of Table of Child-Links-->
 <HR>
@@ -607,7 +609,7 @@ jQuery</A>
   HREF="http://jquery.com/download/">Descarga la librería</A>)
 
 <P>
-<A NAME="3125"></A><SPAN  CLASS="textbf">jQuery</SPAN> is a cross-platform JavaScript library designed to simplify
+<A NAME="3126"></A><SPAN  CLASS="textbf">jQuery</SPAN> is a cross-platform JavaScript library designed to simplify
 the client-side scripting of HTML. 
 
 <P>
@@ -837,8 +839,15 @@ $( "p" ).removeClass( "myClass noClass" ).addClass( "yourClass" );
 </UL>
 
 <P>
+
+<H4><A NAME="SECTION04140080000000000000">
+Ajax, jQuery y Sinatra</A>
+</H4>
+  
+
+<P>
 JavaScript enables you to freely
-pass functions around to be executed at a later time. A <A NAME="3135"></A><SPAN  CLASS="textbf">callback</SPAN> is a
+pass functions around to be executed at a later time. A <A NAME="3140"></A><SPAN  CLASS="textbf">callback</SPAN> is a
 function that is passed as an argument to another function and is usually 
 executed
 after its parent function has completed. 
@@ -1048,7 +1057,7 @@ El ejemplo en <code>app2.rb</code> puede verse desplegado en Heroku:
 
 <P>
 
-<H4><A NAME="SECTION04140080000000000000">
+<H4><A NAME="SECTION04140090000000000000">
 JSON.stringify()</A>
 </H4>
   
@@ -1101,7 +1110,7 @@ To learn to use JSFiddle wath the YouTube video
 
 <P>
 
-<H4><A NAME="SECTION04140090000000000000">
+<H4><A NAME="SECTION041400100000000000000">
 Underscore</A>
 </H4>
   
@@ -1248,7 +1257,7 @@ true
 
 <P>
 
-<H4><A NAME="SECTION041400100000000000000">
+<H4><A NAME="SECTION041400110000000000000">
 Templates en Underscore</A>
 </H4>
   
@@ -1264,11 +1273,11 @@ Templates en Underscore</A>
 <P>
 Compiles JavaScript templates into functions that can be evaluated for
 rendering. Useful for rendering complicated bits of HTML from a JavaScript 
-object or from <A NAME="3371"></A><SPAN  CLASS="textbf">JSON</SPAN> data
+object or from <A NAME="3378"></A><SPAN  CLASS="textbf">JSON</SPAN> data
 sources.
 
 <P>
-JSON, or <A NAME="3373"></A><SPAN  CLASS="textbf">JavaScript Object Notation</SPAN>, is an open standard format
+JSON, or <A NAME="3380"></A><SPAN  CLASS="textbf">JavaScript Object Notation</SPAN>, is an open standard format
 that uses human-readable text to transmit data objects consisting of
 attribute–value pairs. It is used primarily to transmit data between
 a server and web application, as an alternative to XML.
@@ -1493,7 +1502,7 @@ _.template("Using 'with': &lt;%= data.answer %&gt;", {answer: 'no'}, {variable: 
 
 <P>
 
-<H4><A NAME="SECTION041400110000000000000">
+<H4><A NAME="SECTION041400120000000000000">
 Content delivery network or content distribution network (CDN)</A>
 </H4>
   
@@ -1531,7 +1540,7 @@ Google provee también un servicio CDN para los desarrolladores en
 
 <P>
 
-<H4><A NAME="SECTION041400120000000000000">
+<H4><A NAME="SECTION041400130000000000000">
 textarea, autofocus y button</A>
 </H4>
   
@@ -1544,7 +1553,7 @@ textarea, autofocus y button</A>
 The <code>&lt;textarea&gt;</code> tag defines a multi-line text input control.
 
 <P>
-A <A NAME="3383"></A><SPAN  CLASS="textbf">text area</SPAN> can hold an unlimited number of characters, and the text
+A <A NAME="3390"></A><SPAN  CLASS="textbf">text area</SPAN> can hold an unlimited number of characters, and the text
 renders in a fixed-width font (usually Courier).
 
 <P>
@@ -1587,13 +1596,13 @@ Inside a <code>&lt;button&gt;</code> element you can put content, like text or i
 
 <P>
 
-<H4><A NAME="SECTION041400130000000000000">
+<H4><A NAME="SECTION041400140000000000000">
 Local Storage (HTML5 Web Storage)</A>
 </H4>
   
 
 <P>
-<A NAME="3851"></A><SPAN  CLASS="textbf">Web storage</SPAN> and <A NAME="3853"></A><SPAN  CLASS="textbf">DOM storage</SPAN> 
+<A NAME="3858"></A><SPAN  CLASS="textbf">Web storage</SPAN> and <A NAME="3860"></A><SPAN  CLASS="textbf">DOM storage</SPAN> 
 (document object model) are web application
 software methods and protocols used for storing data in a web browser. 
 
@@ -1613,8 +1622,8 @@ parecido, pero con el limite de 100kb.
 
 <P>
 </LI>
-<LI>There are two main web storage types: <A NAME="3855"></A><SPAN  CLASS="textbf">local storage</SPAN>
-and <A NAME="3857"></A><SPAN  CLASS="textbf">session storage</SPAN>, behaving similarly to persistent cookies and session
+<LI>There are two main web storage types: <A NAME="3862"></A><SPAN  CLASS="textbf">local storage</SPAN>
+and <A NAME="3864"></A><SPAN  CLASS="textbf">session storage</SPAN>, behaving similarly to persistent cookies and session
 cookies respectively.
 </LI>
 <LI>Unlike cookies, which can be accessed by both the server and client side, web storage falls exclusively under the purview of client-side scripting
@@ -1683,7 +1692,7 @@ clears it for all other pages on that site.
 
 <P>
 
-<H4><A NAME="SECTION041400140000000000000">
+<H4><A NAME="SECTION041400150000000000000">
 global.css</A>
 </H4>
   
@@ -1749,7 +1758,7 @@ basándonos en el lenguaje o que tipo de etiqueta no son
 <LI><A NAME="tex2html114"
   HREF="http://www.w3.org/TR/CSS2/selector.html#pattern-matching">CSS pattern matching</A>
 <P>
-In CSS, <A NAME="3865"></A><SPAN  CLASS="textbf">pattern matching</SPAN> rules determine which style rules apply
+In CSS, <A NAME="3872"></A><SPAN  CLASS="textbf">pattern matching</SPAN> rules determine which style rules apply
 to elements in the document tree. 
 These patterns, called selectors,
 may range from simple element names to rich contextual patterns. If all
@@ -1807,7 +1816,7 @@ See
 
 <P>
 
-<H4><A NAME="SECTION041400150000000000000">
+<H4><A NAME="SECTION041400160000000000000">
 csv.js</A>
 </H4>
   
@@ -1893,7 +1902,7 @@ csv.js</A>
 
 <P>
 
-<H4><A NAME="SECTION041400160000000000000">
+<H4><A NAME="SECTION041400170000000000000">
 Tareas</A>
 </H4>
   
@@ -1912,19 +1921,19 @@ Tareas</A>
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html1030"
+<A NAME="tex2html1031"
   HREF="node12.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1024"
+<A NAME="tex2html1025"
   HREF="node7.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1018"
+<A NAME="tex2html1019"
   HREF="node10.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1026"
+<A NAME="tex2html1027"
   HREF="node90.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1028"
+<A NAME="tex2html1029"
   HREF="node93.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -1964,11 +1973,11 @@ Tareas</A>
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1031"
+<B> Sig:</B> <A NAME="tex2html1032"
   HREF="node12.html">Comentarios y Consejos</A>
-<B>Sup:</B> <A NAME="tex2html1025"
+<B>Sup:</B> <A NAME="tex2html1026"
   HREF="node7.html">Expresiones Regulares y Análisis</A>
-<B> Ant:</B> <A NAME="tex2html1019"
+<B> Ant:</B> <A NAME="tex2html1020"
   HREF="node10.html">Práctica: Conversor de Temperaturas</A>
 </DIV>
 <!--End of Navigation Panel-->
