--- a/node7.html
+++ b/node7.html
@@ -212,88 +212,90 @@ Expresiones Regulares y Análisis Léxico en JavaScript
 <LI><A NAME="tex2html903"
   HREF="node11.html#SECTION04140070000000000000">How JQuery Works</A>
 <LI><A NAME="tex2html904"
-  HREF="node11.html#SECTION04140080000000000000">JSON.stringify()</A>
+  HREF="node11.html#SECTION04140080000000000000">Ajax, jQuery y Sinatra</A>
 <LI><A NAME="tex2html905"
-  HREF="node11.html#SECTION04140090000000000000">Underscore</A>
+  HREF="node11.html#SECTION04140090000000000000">JSON.stringify()</A>
 <LI><A NAME="tex2html906"
-  HREF="node11.html#SECTION041400100000000000000">Templates en Underscore</A>
+  HREF="node11.html#SECTION041400100000000000000">Underscore</A>
 <LI><A NAME="tex2html907"
-  HREF="node11.html#SECTION041400110000000000000">Content delivery network or content distribution network (CDN)</A>
+  HREF="node11.html#SECTION041400110000000000000">Templates en Underscore</A>
 <LI><A NAME="tex2html908"
-  HREF="node11.html#SECTION041400120000000000000">textarea, autofocus y button</A>
+  HREF="node11.html#SECTION041400120000000000000">Content delivery network or content distribution network (CDN)</A>
 <LI><A NAME="tex2html909"
-  HREF="node11.html#SECTION041400130000000000000">Local Storage (HTML5 Web Storage)</A>
+  HREF="node11.html#SECTION041400130000000000000">textarea, autofocus y button</A>
 <LI><A NAME="tex2html910"
-  HREF="node11.html#SECTION041400140000000000000">global.css</A>
+  HREF="node11.html#SECTION041400140000000000000">Local Storage (HTML5 Web Storage)</A>
 <LI><A NAME="tex2html911"
-  HREF="node11.html#SECTION041400150000000000000">csv.js</A>
+  HREF="node11.html#SECTION041400150000000000000">global.css</A>
 <LI><A NAME="tex2html912"
-  HREF="node11.html#SECTION041400160000000000000">Tareas</A>
+  HREF="node11.html#SECTION041400160000000000000">csv.js</A>
+<LI><A NAME="tex2html913"
+  HREF="node11.html#SECTION041400170000000000000">Tareas</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html913"
+<LI><A NAME="tex2html914"
   HREF="node12.html">Comentarios y Consejos</A>
 <UL>
-<LI><A NAME="tex2html914"
-  HREF="node12.html#SECTION04150010000000000000">How can I push a local Git branch to a remote with a different name easily?</A>
 <LI><A NAME="tex2html915"
+  HREF="node12.html#SECTION04150010000000000000">How can I push a local Git branch to a remote with a different name easily?</A>
+<LI><A NAME="tex2html916"
   HREF="node12.html#SECTION04150020000000000000">favicons y shortcut icons</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html916"
-  HREF="node13.html">Ejercicios</A>
 <LI><A NAME="tex2html917"
+  HREF="node13.html">Ejercicios</A>
+<LI><A NAME="tex2html918"
   HREF="node14.html">Práctica: Palabras Repetidas</A>
 <UL>
-<LI><A NAME="tex2html918"
-  HREF="node14.html#SECTION04170010000000000000">Donde</A>
 <LI><A NAME="tex2html919"
-  HREF="node14.html#SECTION04170020000000000000">Ejemplo de ejecución</A>
+  HREF="node14.html#SECTION04170010000000000000">Donde</A>
 <LI><A NAME="tex2html920"
-  HREF="node14.html#SECTION04170030000000000000">Estructura</A>
+  HREF="node14.html#SECTION04170020000000000000">Ejemplo de ejecución</A>
 <LI><A NAME="tex2html921"
-  HREF="node14.html#SECTION04170040000000000000">index.html</A>
+  HREF="node14.html#SECTION04170030000000000000">Estructura</A>
 <LI><A NAME="tex2html922"
-  HREF="node14.html#SECTION04170050000000000000">global.css</A>
+  HREF="node14.html#SECTION04170040000000000000">index.html</A>
 <LI><A NAME="tex2html923"
-  HREF="node14.html#SECTION04170060000000000000">repeated_words.js</A>
+  HREF="node14.html#SECTION04170050000000000000">global.css</A>
 <LI><A NAME="tex2html924"
+  HREF="node14.html#SECTION04170060000000000000">repeated_words.js</A>
+<LI><A NAME="tex2html925"
   HREF="node14.html#SECTION04170070000000000000">Ficheros de Entrada</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html925"
-  HREF="node15.html">Ejercicios</A>
 <LI><A NAME="tex2html926"
-  HREF="node16.html">Ejercicios</A>
+  HREF="node15.html">Ejercicios</A>
 <LI><A NAME="tex2html927"
+  HREF="node16.html">Ejercicios</A>
+<LI><A NAME="tex2html928"
   HREF="node17.html">Práctica: Ficheros INI</A>
 <UL>
-<LI><A NAME="tex2html928"
-  HREF="node17.html#SECTION041100010000000000000">Donde</A>
 <LI><A NAME="tex2html929"
-  HREF="node17.html#SECTION041100020000000000000">index.html</A>
+  HREF="node17.html#SECTION041100010000000000000">Donde</A>
 <LI><A NAME="tex2html930"
-  HREF="node17.html#SECTION041100030000000000000">Ficheros</A>
+  HREF="node17.html#SECTION041100020000000000000">index.html</A>
 <LI><A NAME="tex2html931"
-  HREF="node17.html#SECTION041100040000000000000">global.css</A>
+  HREF="node17.html#SECTION041100030000000000000">Ficheros</A>
 <LI><A NAME="tex2html932"
-  HREF="node17.html#SECTION041100050000000000000">Ficheros de Prueba</A>
+  HREF="node17.html#SECTION041100040000000000000">global.css</A>
 <LI><A NAME="tex2html933"
-  HREF="node17.html#SECTION041100060000000000000">ini.js</A>
+  HREF="node17.html#SECTION041100050000000000000">Ficheros de Prueba</A>
 <LI><A NAME="tex2html934"
-  HREF="node17.html#SECTION041100070000000000000">Dudas sobre la Sintáxis del Formato <TT>INI</TT></A>
+  HREF="node17.html#SECTION041100060000000000000">ini.js</A>
 <LI><A NAME="tex2html935"
-  HREF="node17.html#SECTION041100080000000000000">Tareas</A>
+  HREF="node17.html#SECTION041100070000000000000">Dudas sobre la Sintáxis del Formato <TT>INI</TT></A>
 <LI><A NAME="tex2html936"
+  HREF="node17.html#SECTION041100080000000000000">Tareas</A>
+<LI><A NAME="tex2html937"
   HREF="node17.html#SECTION041100090000000000000">Véase</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html937"
+<LI><A NAME="tex2html938"
   HREF="node18.html">Práctica: Analizador Léxico para Un Subconjunto de JavaScript</A>
 <UL>
-<LI><A NAME="tex2html938"
-  HREF="node18.html#SECTION041110010000000000000">TDOP, Top Down Operator Precedence</A>
 <LI><A NAME="tex2html939"
+  HREF="node18.html#SECTION041110010000000000000">TDOP, Top Down Operator Precedence</A>
+<LI><A NAME="tex2html940"
   HREF="node18.html#SECTION041110020000000000000">Objetivos de la Práctica</A>
 </UL></UL>
 <!--End of Table of Child-Links-->
