--- a/node11.html
+++ b/node11.html
@@ -1137,7 +1137,7 @@ methods like:
 
 <P>
 En ECMAScript 5/JavaScript 1.6.  existen los métodos 
-<code>map</code>, <code>filter</code> y  <code>reduce</code> similares
+<code>map</code>, <code>filter</code>, <code>forEach</code> y  <code>reduce</code> similares
 a los de Underscore.
 
 <P>
@@ -1255,6 +1255,20 @@ true
 'hi: moe'
 &gt;
 </PRE>
+Los objetos <code>Function</code> disponen de un método <code>bind</code>
+nativo en las últimas versiones de JS:
+<PRE>
+&gt; func = function(){ return 'hola ' + this.name }
+[Function]
+&gt; g = func.bind({name: 'Juan'})
+[Function]
+&gt; g()
+'hola Juan'
+&gt; g = func.bind({name: 'Pedro'})
+[Function]
+&gt; g()
+'hola Pedro'
+</PRE>
 </LI>
 </UL>
 </LI>
@@ -1278,11 +1292,11 @@ Templates en Underscore</A>
 <P>
 Compiles JavaScript templates into functions that can be evaluated for
 rendering. Useful for rendering complicated bits of HTML from a JavaScript 
-object or from <A NAME="3378"></A><SPAN  CLASS="textbf">JSON</SPAN> data
+object or from <A NAME="3380"></A><SPAN  CLASS="textbf">JSON</SPAN> data
 sources.
 
 <P>
-JSON, or <A NAME="3380"></A><SPAN  CLASS="textbf">JavaScript Object Notation</SPAN>, is an open standard format
+JSON, or <A NAME="3382"></A><SPAN  CLASS="textbf">JavaScript Object Notation</SPAN>, is an open standard format
 that uses human-readable text to transmit data objects consisting of
 attribute–value pairs. It is used primarily to transmit data between
 a server and web application, as an alternative to XML.
@@ -1558,7 +1572,7 @@ textarea, autofocus y button</A>
 The <code>&lt;textarea&gt;</code> tag defines a multi-line text input control.
 
 <P>
-A <A NAME="3390"></A><SPAN  CLASS="textbf">text area</SPAN> can hold an unlimited number of characters, and the text
+A <A NAME="3392"></A><SPAN  CLASS="textbf">text area</SPAN> can hold an unlimited number of characters, and the text
 renders in a fixed-width font (usually Courier).
 
 <P>
@@ -1607,7 +1621,7 @@ Local Storage (HTML5 Web Storage)</A>
   
 
 <P>
-<A NAME="3860"></A><SPAN  CLASS="textbf">Web storage</SPAN> and <A NAME="3862"></A><SPAN  CLASS="textbf">DOM storage</SPAN> 
+<A NAME="3862"></A><SPAN  CLASS="textbf">Web storage</SPAN> and <A NAME="3864"></A><SPAN  CLASS="textbf">DOM storage</SPAN> 
 (document object model) are web application
 software methods and protocols used for storing data in a web browser. 
 
@@ -1627,8 +1641,8 @@ parecido, pero con el limite de 100kb.
 
 <P>
 </LI>
-<LI>There are two main web storage types: <A NAME="3864"></A><SPAN  CLASS="textbf">local storage</SPAN>
-and <A NAME="3866"></A><SPAN  CLASS="textbf">session storage</SPAN>, behaving similarly to persistent cookies and session
+<LI>There are two main web storage types: <A NAME="3866"></A><SPAN  CLASS="textbf">local storage</SPAN>
+and <A NAME="3868"></A><SPAN  CLASS="textbf">session storage</SPAN>, behaving similarly to persistent cookies and session
 cookies respectively.
 </LI>
 <LI>Unlike cookies, which can be accessed by both the server and client side, web storage falls exclusively under the purview of client-side scripting
@@ -1763,7 +1777,7 @@ basándonos en el lenguaje o que tipo de etiqueta no son
 <LI><A NAME="tex2html114"
   HREF="http://www.w3.org/TR/CSS2/selector.html#pattern-matching">CSS pattern matching</A>
 <P>
-In CSS, <A NAME="3874"></A><SPAN  CLASS="textbf">pattern matching</SPAN> rules determine which style rules apply
+In CSS, <A NAME="3876"></A><SPAN  CLASS="textbf">pattern matching</SPAN> rules determine which style rules apply
 to elements in the document tree. 
 These patterns, called selectors,
 may range from simple element names to rich contextual patterns. If all
