--- a/node11.html
+++ b/node11.html
@@ -1626,7 +1626,7 @@ Local Storage (HTML5 Web Storage)</A>
   
 
 <P>
-<A NAME="3864"></A><SPAN  CLASS="textbf">Web storage</SPAN> and <A NAME="3866"></A><SPAN  CLASS="textbf">DOM storage</SPAN> 
+<A NAME="3865"></A><SPAN  CLASS="textbf">Web storage</SPAN> and <A NAME="3867"></A><SPAN  CLASS="textbf">DOM storage</SPAN> 
 (document object model) are web application
 software methods and protocols used for storing data in a web browser. 
 
@@ -1646,14 +1646,16 @@ parecido, pero con el limite de 100kb.
 
 <P>
 </LI>
-<LI>There are two main web storage types: <A NAME="3868"></A><SPAN  CLASS="textbf">local storage</SPAN>
-and <A NAME="3870"></A><SPAN  CLASS="textbf">session storage</SPAN>, behaving similarly to persistent cookies and session
+<LI>There are two main web storage types: <A NAME="3869"></A><SPAN  CLASS="textbf">local storage</SPAN>
+and <A NAME="3871"></A><SPAN  CLASS="textbf">session storage</SPAN>, behaving similarly to persistent cookies and session
 cookies respectively.
 </LI>
 <LI>Unlike cookies, which can be accessed by both the server and client side, web storage falls exclusively under the purview of client-side scripting
 </LI>
 <LI>The HTML5 localStorage object is isolated per domain (the same segregation rules as the <A NAME="tex2html106"
   HREF="http://en.wikipedia.org/wiki/Same_origin_policy">same origin policy</A>).
+Under this policy, 
+<FONT COLOR="#0000ff"> a web browser permits scripts contained in a first web page to access data in a second web page, but only if both web pages have the same origin</FONT>. 
 
 <P>
 The same-origin policy permits scripts running on pages originating from the same
@@ -1782,7 +1784,7 @@ basándonos en el lenguaje o que tipo de etiqueta no son
 <LI><A NAME="tex2html114"
   HREF="http://www.w3.org/TR/CSS2/selector.html#pattern-matching">CSS pattern matching</A>
 <P>
-In CSS, <A NAME="3878"></A><SPAN  CLASS="textbf">pattern matching</SPAN> rules determine which style rules apply
+In CSS, <A NAME="3881"></A><SPAN  CLASS="textbf">pattern matching</SPAN> rules determine which style rules apply
 to elements in the document tree. 
 These patterns, called selectors,
 may range from simple element names to rich contextual patterns. If all
